--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
 swap_wall
 *.o
+aclocal.m4
+autom4te.cache
+compile
+config.guess
+config.h
+config.h.in
+config.log
+config.status
+config.sub
+configure
+depcomp
+install-sh
+libtool
+ltmain.sh
+m4
+Makefile
+Makefile.in
+missing
+stamp-h1
+.deps
